# SYM

./: .gitignore  README.md  pyproject.toml
app/DB/: core.py
app/DB/Orms/: ExpenseOrm.py  IncomeOrm.py  UserOrm.py
app/Schemes/: ExpenseDTO.py  IncomeDTO.py  UserDTO.py
migrations/: env.py
migrations/versions/: dc9d56682ee2_.py
