[tool.poetry]
name = "sym - save your money"
version = "0.1.0"
description = ""
authors = ["Michael"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
SQLAlchemy = "^2.0.31"
asyncpg = "^0.29.0"
redis = "^5.0.7"
alembic = "^1.13.2"
python-dotenv = "^1.0.1"
greenlet = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
